--- a/MyPixyMain/index.html
+++ b/MyPixyMain/index.html
@@ -24,7 +24,7 @@ and open the template in the editor.
 	<table id="menu">
             <tr>
                 <td><a href="http://www.mypixy.de/index.html">Startseite</a></td>
-                <td><a href="login.html">Login</a></td>
+                <td><a href="login.php">Login</a></td>
                 <td><a href="impressum.html">Impressum</a></td>
             </tr>
 	</table>
@@ -34,7 +34,7 @@ and open the template in the editor.
             <h2>Herzlich Willkommen bei My Pixy!</h2>
 		<p>
                     My Pixy ist ein Web-Tool zur Organisation und Verwaltung von Schulaufgaben.
-                    Wenn du die Anwendung benutzen möchtest, gehe zum <a href="login.html">Login</a> 
+                    Wenn du die Anwendung benutzen möchtest, gehe zum <a href="login.php">Login</a> 
                     oder zur <a href="registrieren.html">Registrierung</a>, falls du noch keinen Account hast.
              	</p>
                 <p>Viel Spaß</p>
