Test with PhpStorm

--- a/MyPixyMain/index.html
+++ b/MyPixyMain/index.html
@@ -11,7 +11,8 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
         <!-- Bilder <link rel="shortcut icon" href="images/favicon.ico"> 
-             Skript <script type="text/javascript"></script>-->    
+             Skript <script type="text/javascript"></script>-->
+        <!-- Test -->
     </head>
 
     <body>
